; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_dma.c_sync_descbuffer_for_device.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43legacy/extr_dma.c_sync_descbuffer_for_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43legacy_dmaring = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 }

@DMA_FROM_DEVICE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43legacy_dmaring*, i32, i64)* @sync_descbuffer_for_device to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sync_descbuffer_for_device(%struct.b43legacy_dmaring* %0, i32 %1, i64 %2) #0 {
  %4 = alloca %struct.b43legacy_dmaring*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store %struct.b43legacy_dmaring* %0, %struct.b43legacy_dmaring** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  %7 = load %struct.b43legacy_dmaring*, %struct.b43legacy_dmaring** %4, align 8
  %8 = getelementptr inbounds %struct.b43legacy_dmaring, %struct.b43legacy_dmaring* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i32 @B43legacy_WARN_ON(i32 %9)
  %11 = load %struct.b43legacy_dmaring*, %struct.b43legacy_dmaring** %4, align 8
  %12 = getelementptr inbounds %struct.b43legacy_dmaring, %struct.b43legacy_dmaring* %11, i32 0, i32 0
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i64, i64* %6, align 8
  %20 = load i32, i32* @DMA_FROM_DEVICE, align 4
  %21 = call i32 @dma_sync_single_for_device(i32 %17, i32 %18, i64 %19, i32 %20)
  ret void
}

declare dso_local i32 @B43legacy_WARN_ON(i32) #1

declare dso_local i32 @dma_sync_single_for_device(i32, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
